--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "langchain": "^0.0.154",
     "pdf-parse": "^1.1.1",
+    "redis": "^4.6.10",
     "walkdir": "^0.4.1"
   }
 }
