--- a/package.json
+++ b/package.json
@@ -3,16 +3,15 @@
   "module": "index.ts",
   "type": "module",
   "devDependencies": {
-    "@types/pdf-parse": "^1.1.2",
     "bun-types": "latest"
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.36.0",
+    "dotenv": "^16.3.1",
     "langchain": "^0.0.154",
-    "pdf-parse": "^1.1.1",
-    "redis": "^4.6.10",
     "walkdir": "^0.4.1"
   }
 }
